package LabOne;

public enum AccountExceptionType {
	FUND_INSUFFICIENCY
}
